changing position fixed to absolute in attempt to solve sticky nav weird horizontal scroll bug

--- a/style/main.scss
+++ b/style/main.scss
@@ -70,7 +70,7 @@ h1 {
 
 .stickyNav {
     width: 5%;
-    position: fixed;
+    position: absolute;
     top: 1%;
     right: 1%;
     z-index: 9;
